Update h1 for interior pages on small screens. https://github.com/srophe/e-gedsh/issues/222

--- a/srophe-app/resources/css/main.css
+++ b/srophe-app/resources/css/main.css
@@ -837,6 +837,7 @@ pre {
 
 @media screen and (max-width: 480px) {
 .banner-index h1 {font-size: 1.75em;}
+.banner-title h1{font-size:1.25em;}
 .navbar-collapse, .dropdown-menu {float:none; width:100% !important;}
 .navbar-nav li {width:100% !important; float:none;}
 .mobile-submenu {
